
    MAPREDUCE-4371. Check for cyclic dependencies in Jobcontrol job DAG
    (madhukara phatak via bobby)

    MAPREDUCE-4686. hadoop-mapreduce-client-core fails compilation in Eclipse 
    due to missing Avro-generated classes (Chris Nauroth via harsh)

    MAPREDUCE-4735. Make arguments in TestDFSIO case insensitive.
    (Brandon Li via suresh)

  BUG FIXES

    MAPREDUCE-4272. SortedRanges.Range#compareTo is not spec compliant.
    (Yu Gao via llu)

    MAPREDUCE-4356. [Rumen] Provide access to the method
                    ParsedTask.obtainTaskAttempts(). (ravigummadi)

    MAPREDUCE-4100. [Gridmix] Bug fixed in compression emulation feature for 
                    map only jobs. (amarrk)

    MAPREDUCE-4149. [Rumen] Rumen fails to parse certain counter
                    strings. (ravigummadi)

    MAPREDUCE-4083. [Gridmix] NPE in cpu emulation. (amarrk)

    MAPREDUCE-4087. [Gridmix] GenerateDistCacheData job of Gridmix can
                    become slow in some cases (ravigummadi).

    MAPREDUCE-3953. [Gridmix] Gridmix throws NPE and does not simulate a
                    job if the trace contains null taskStatus for a task.
                    (ravigummadi)

    MAPREDUCE-3829. [Gridmix] Gridmix should give better error message when
                    input data directory already exists and -generate opton is
                    given.(ravigummadi)

    MAPREDUCE-2722. [Gridmix] Gridmix simulated job's map's hdfsBytesRead
                    counter is wrong when compressed input is used.(ravigummadi)

    MAPREDUCE-3757. [Rumen] Fixed Rumen Folder to adjust shuffleFinished and
                    sortFinished times when needed.(ravigummadi)

    MAPREDUCE-3194. "mapred mradmin" command is broken in mrv2
                     (Jason Lowe via bobby)

    MAPREDUCE-3462. Fix Gridmix JUnit testcase failures.
                    (Ravi Prakash and Ravi Gummadi via amarrk)

    MAPREDUCE-3349. Log rack-name in JobHistory for unsuccessful tasks.